--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -13,8 +13,8 @@ permissions:
 
 # Make prefixes for this repo
 env:
-  FILTER_PREFIX: Vauxhall-Opel-
-  SIGNAL_PREFIX: VAUXHALL-OPEL
+  FILTER_ARGS: --filter-prefix=VuaxhallOpel- --filter-prefix=Jeep- --filter-prefix=Dodge- --filter-prefix=Chrysler- --filter-prefix=Ram- --filter-prefix=Citroen- --filter-prefix=Peugeot- --filter-prefix=AlfaRomeo- --filter-prefix=Fiat- --filter-prefix=Maserati- --filter-prefix=DS-
+  SIGNAL_PREFIX: VAUXHALLOPEL
 
 concurrency:
   group: "data-update"
@@ -72,8 +72,17 @@ jobs:
           path: .meta
 
       - name: Run data extraction script
-        run: python .meta/repo-tools/extract_signalsets.py --fetch --workspace workspace --output build --filter-prefix=${{ env.FILTER_PREFIX }} --signal-prefix=${{ env.SIGNAL_PREFIX }}
+        run: python .meta/repo-tools/extract_signalsets.py --fetch --workspace workspace --output build ${{ env.FILTER_ARGS }} --signal-prefix=${{ env.SIGNAL_PREFIX }}
         id: extract_data
+
+      - name: Display provenance report in workflow summary
+        run: |
+          echo "## Signal Provenance Report" >> $GITHUB_STEP_SUMMARY
+          cat build/signal_provenance_report.md >> $GITHUB_STEP_SUMMARY
+          echo -e "\n\n## Raw JSON Data" >> $GITHUB_STEP_SUMMARY
+          echo '```json' >> $GITHUB_STEP_SUMMARY
+          cat build/signal_provenance_report.json >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
 
       - name: Checkout schemas repo
         uses: actions/checkout@v4
